# CMakeAdobeNativeExtension

./: .gitignore  CMakeLists.txt  README.md
include/: dllMain.h
src/: dllMain.cpp
